# Teggi

./: .dockerignore  .env.examle  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 609515d665e5_init.py  61b0c6e09675_edited_users.py
app/bot/: bot.py
app/bot/filters/: __init__.py  admin.py
app/bot/handlers/: __init__.py  checkin.py  common.py  other.py  settings.py
app/bot/handlers/admin/: __init__.py  commands.py  edit_settings.py  stats.py
app/bot/keyboards/: admin.py  user.py
app/bot/middlewares/: __init__.py  db.py
app/bot/scheduler/: scheduler.py
app/bot/templates/: __init__.py  templates.py
app/bot/utils/: __init__.py  setup_commands.py  utils.py
app/core/AI/: __init__.py  advice_generator.py
app/infrastructure/database/: __init__.py
app/infrastructure/database/models/: __init__.py  activity.py  checkin.py  event.py  user.py
app/infrastructure/database/repositories/: __init__.py  activity.py  checkin.py  event.py  user.py
app/infrastructure/other/: filler.py
config/: config.py
